--- a/ManagMe/src/index.css
+++ b/ManagMe/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -34,6 +35,13 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+.button-light-mode button {
+  background-color: #e5e7eb; 
+  color: #000000;
+  border: 1px solid #9ca3af; 
+  padding: 0.25rem 0.75rem;
+  border-radius: 0.375rem;
 }
 
 button {
