--- a/ManagMe/src/App.css
+++ b/ManagMe/src/App.css
@@ -1,10 +1,12 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
-
+textarea{
+  border: 1px solid gray;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
